[Syam][Server and Client] Add API
1. Add an API to get the policy info service from express

--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc -p",
+    "build": "tsc",
     "start": "node src/app.js",
     "dev": "nodemon src/app.ts"
   },
@@ -13,7 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "typedi": "^0.8.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
