--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,8 @@
     "@angular/router": "~10.0.2",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.0",
+    "chart.js": "^2.7.2",
+    "ng2-charts": "^2.3.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
